Foliage Tree and Grass

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,3 +1,5 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=1DB5D10A48AF8C5CF6BFB8AA9BD71809
-ProjectName=Third Person BP Game Template
+ProjectName="MonsterSmith "
+ProjectVersion=0.0.0.1
+
