--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,15 +2,16 @@
 GameName=Project_S
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
-GameDefaultMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
-TransitionMap=
+EditorStartupMap=/Game/ThirdPerson/Maps/WhisperingWild.WhisperingWild
+GameDefaultMap=/Game/ThirdPerson/Maps/WhisperingWild.WhisperingWild
+TransitionMap=None
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 GlobalDefaultGameMode=/Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode.BP_ThirdPersonGameMode_C
 GlobalDefaultServerGameMode=None
-GameInstanceClass=/Game/SaveSystem/BP_MyGameInstance.BP_MyGameInstance_C
+GameInstanceClass=/Script/Engine.GameInstance
+ServerDefaultMap=/Game/ThirdPerson/Maps/City.City
 
 [/Script/Engine.RendererSettings]
 r.ReflectionMethod=1
