--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -10,7 +10,7 @@ TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 GlobalDefaultGameMode=/Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode.BP_ThirdPersonGameMode_C
 GlobalDefaultServerGameMode=None
-GameInstanceClass=/Script/Engine.GameInstance
+GameInstanceClass=/Game/GameInstance/BP_MainGameInstance.BP_MainGameInstance_C
 ServerDefaultMap=/Game/ThirdPerson/Maps/City.City
 
 [/Script/Engine.RendererSettings]
