--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -14,9 +14,9 @@ GameInstanceClass=/Game/GameInstance/BP_MainGameInstance.BP_MainGameInstance_C
 ServerDefaultMap=/Game/ThirdPerson/Maps/City.City
 
 [/Script/Engine.RendererSettings]
-r.ReflectionMethod=1
+r.ReflectionMethod=2
 r.GenerateMeshDistanceFields=True
-r.DynamicGlobalIlluminationMethod=1
+r.DynamicGlobalIlluminationMethod=0
 r.Lumen.TraceMeshSDFs=0
 r.Shadow.Virtual.Enable=1
 r.Mobile.EnableNoPrecomputedLightingCSMShader=1
@@ -27,6 +27,9 @@ r.DefaultFeature.LocalExposure.HighlightContrastScale=0.8
 
 r.DefaultFeature.LocalExposure.ShadowContrastScale=0.8
 r.VirtualTextures=True
+r.RayTracing=False
+r.AntiAliasingMethod=2
+r.DefaultFeature.MotionBlur=False
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
