--- a/Project_S.uproject
+++ b/Project_S.uproject
@@ -25,6 +25,14 @@
 		{
 			"Name": "PCG",
 			"Enabled": true
+		},
+		{
+			"Name": "MediaFrameworkUtilities",
+			"Enabled": true
+		},
+		{
+			"Name": "MfMedia",
+			"Enabled": true
 		}
 	]
 }
