--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -27,9 +27,12 @@ r.DefaultFeature.LocalExposure.HighlightContrastScale=0.8
 
 r.DefaultFeature.LocalExposure.ShadowContrastScale=0.8
 r.VirtualTextures=True
-r.RayTracing=False
-r.AntiAliasingMethod=2
+r.RayTracing=True
+r.AntiAliasingMethod=4
 r.DefaultFeature.MotionBlur=False
+r.VT.TileSize=256
+r.Lumen.TranslucencyReflections.FrontLayer.EnableForProject=False
+r.SkinCache.CompileShaders=True
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
