--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -15,3 +15,7 @@ bShouldAcquireMissingChunksOnLoad=False
 bShouldWarnAboutInvalidAssets=True
 MetaDataTagsForAssetRegistry=()
 
+[/Script/UnrealEd.ProjectPackagingSettings]
+BuildConfiguration=PPBC_Shipping
+Build=Always
+
