Configuring build setting icon, splash image.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,8 +2,8 @@
 GameName=Project_S
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/ThirdPerson/Maps/WhisperingWild.WhisperingWild
-GameDefaultMap=/Game/ThirdPerson/Maps/WhisperingWild.WhisperingWild
+EditorStartupMap=/Game/Menu/LV_MainMenu.LV_MainMenu
+GameDefaultMap=/Game/Menu/LV_MainMenu.LV_MainMenu
 TransitionMap=None
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
@@ -11,7 +11,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 GlobalDefaultGameMode=/Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode.BP_ThirdPersonGameMode_C
 GlobalDefaultServerGameMode=None
 GameInstanceClass=/Game/Utils/BP_MainGameInstance.BP_MainGameInstance_C
-ServerDefaultMap=/Game/ThirdPerson/Maps/City.City
+ServerDefaultMap=/Game/Menu/LV_MainMenu.LV_MainMenu
 
 [/Script/Engine.RendererSettings]
 r.ReflectionMethod=2
@@ -40,7 +40,7 @@ DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
 +D3D12TargetedShaderFormats=PCD3D_SM6
 -D3D11TargetedShaderFormats=PCD3D_SM5
 +D3D11TargetedShaderFormats=PCD3D_SM5
-Compiler=Default
+Compiler=VisualStudio2022
 AudioSampleRate=48000
 AudioCallbackBufferFrameSize=1024
 AudioNumBuffersToEnqueue=1
