--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -111,7 +111,7 @@ bSkipMovies=False
 +MapsToCook=(FilePath="Boss1")
 +MapsToCook=(FilePath="Boss2")
 +MapsToCook=(FilePath="LV_end")
-+DirectoriesToAlwaysStageAsUFS=(Path="Clips/")
++DirectoriesToAlwaysStageAsUFS=(Path="Clips")
 bRetainStagedDirectory=False
 CustomStageCopyHandler=
 
